# SpaceY-Falcon-9-Project

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.1-cjra-data-collection-1.ipynb  jupyter-labs-webscraping.ipynb
spacey_falcon_9_project/: dataset.py
