[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spacey_falcon_9_project"
version = "0.0.1"
description = "The company SpaceY aims to build a rocket at significantly lower cost by implementing a booster stage that is capable of landing vertically to facilitate reuse. The task in this project is to provide a report determining the cost of a launch and to create predictive analytics to determine whether the booster stage would land properly for a given launch."
authors = [
  { name = "Christian Jelo R. Artoza" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["spacey_falcon_9_project"]
include = ["pyproject.toml", "spacey_falcon_9_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["spacey_falcon_9_project"]
force-sort-within-sections = true

